@@ -1,3 +1,5 @@
+<?php if (!defined('VERSION_VISIBLE') || Config::ValueOf('disable_installer')) { print _("Install scripts disabled"); exit(0); } ?>
+
 <div class="widget-dash col-xs-12 col-md-6 col-md-offset-3" style="margin-top:20px;" >
 <div class="inner" style="min-height:10px;">
 	<h4><?php print _("Invalid installation type"); ?></h4>
